convert s3 to supabase instead
